Build po/shared-mime-info.pot as part of the default build

--- a/po/meson.build
+++ b/po/meson.build
@@ -4,5 +4,14 @@ i18n.gettext(meson.project_name(),
     data_dirs: meson.source_root() / 'data',
 )
 
+pot_target = custom_target('always-build-pot',
+  command: [
+    find_program('ninja'),
+    '-C', meson.build_root(),
+    'shared-mime-info-pot'
+  ],
+  output: 'pot-timestamp',
+  build_by_default: true
+)
 
 test('translations', find_program('check_translations.sh'))
