--- a/data/freedesktop.org.xml.in
+++ b/data/freedesktop.org.xml.in
@@ -4765,6 +4765,7 @@ command to generate the output files.
     <magic>
       <match type="string" value="FWS" offset="0"/>
       <match type="string" value="CWS" offset="0"/>
+      <match type="string" value="ZWS" offset="0"/>
     </magic>
     <glob pattern="*.swf"/>
     <glob pattern="*.spl"/>
